--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -3,16 +3,16 @@ a{
 }
 
 body{
-    background: -webkit-linear-gradient(bottom,#3498db,#9b59b6);
+    background-color: #876445;
+    /* background: -webkit-linear-gradient(bottom,#3498db,#9b59b6); */
     background-repeat: no-repeat;
-    padding-bottom: 303px;
 }
 label{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
 }
 #forgot-pass{
-    color: #9b59b6;
+    color: #876445;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10pt;
     margin-top: 3px;
@@ -37,17 +37,18 @@ label{
     text-align: center;
 }
 #signup{
-    color: #9b59b6;
+    color: #876445;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 10pt;
     margin-top: 16px;
     text-align: center;
 }
 #submit-btn{
-    background: -webkit-linear-gradient(bottom,#3498db,#9b59b6);
+    background-color: #876445;
+    /* background: -webkit-linear-gradient(bottom,#3498db,#876445); */
     border-radius: 21px;
     border: none;
-    box-shadow: 0px 1px 8px #9b59b6;
+    box-shadow: 0px 1px 8px #876445;
     cursor: pointer;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
@@ -58,7 +59,7 @@ label{
     width: 153px;
 }
 #submit-btn:hover{
-    box-shadow: 0px 1px 18px #9b59b6;
+    box-shadow: 0px 1px 18px #876445;
 }
 .form{
     align-items: left;
@@ -68,7 +69,7 @@ label{
 .form-border{
     height: 1px;
     width: 100%;
-    background: -webkit-linear-gradient(right,#3498db,#9b59b6);
+    background: -webkit-linear-gradient(right,#3498db,#876445);
 }
 .form-content{
     background: #fbfbfb;
@@ -77,7 +78,7 @@ label{
     padding-top: 14px;
 }
 .underline-title{
-    background: -webkit-linear-gradient(right,#3498db,#9b59b6); 
+    background: -webkit-linear-gradient(right,#3498db,#876445); 
     height: 2px;
     margin: -1.1px auto 0 auto;
     width: 89px;
